--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@ path: home
       {{title}}
     </strong>
   </h1>
+  <h2>test</h2>
 
   <p>
     <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
