--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Neat Starter
+title: UX UI
 path: home
 ---
 
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h1>
-    Welcome to
+    Jamie Barter
     <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
       {{title}}
     </strong>
