--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: UX UI
+title: Jamie Barter
 path: home
 ---
 
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h1>
-    Jamie Barter
     <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
-      {{title}}
+    {{title}}
     </strong>
+     UX UI
   </h1>
  
 
@@ -51,6 +51,7 @@ path: home
         </article>
     {% endfor %}
 </section>
+</div>
   
 </div>
 
