--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,18 @@ title: Jamie Barter
 path: home
 ---
 
-<div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
-  <h1>
+<div class="container mx-auto lg:h-screen flex flex-col justify-center items-center my-8">
+  <h1 class="">
     <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
     {{title}}
     </strong>
      UX UI
   </h1>
- 
+ </div>
 
 
-<section class="mt-15">
+
+<section class="container mx-auto lg:h-screen flex flex-col justify-center items-center ">
     {% set postslist = collections.post %}
 
     {% for post in postslist | reverse %}
@@ -51,8 +52,6 @@ path: home
         </article>
     {% endfor %}
 </section>
-</div>
   
-</div>
 
 
