--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ path: home
     </strong>
      UX UI
   </h1>
-  <h2>git test git test git test</h2>
+  <h2>Jamie laptop test git</h2>
  </div>
 
 
