--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@ path: home
 
     {% for post in postslist | reverse %}
         <article class="my-8">
+            <img src="{{  post.hero-image}}"></img>
             <h2 class="font-bold text-3xl text-gray-900 mb-2">
                 <a href="{{ post.url | url }}">
                     {% if post.data.title %}
